--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-time-picker": "^6.6.0",
+    "react-timepicker": "^2.0.2",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
