fixed port issue with frontend and backend

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://alenhuang1:YCEYbBAbWvPbQOaY@bruinsonboard.4x13yc1.mongodb.net/?retryWrites=true&w=majority&appName=BruinsOnBoard
+MONG_URI = mongodb+srv://derekmwu:dwu123@bruinsonboard.dzmdx9f.mongodb.net/?retryWrites=true&w=majority&appName=BruinsOnBoard
