--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "i": "^0.3.7",
+    "moment": "^2.30.1",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.1",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -51,7 +53,7 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
+    "concurrently": "^8.2.2"
   }
 }
