--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "express": "^4.18.3",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.0",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.1",
